--- a/schedule.html
+++ b/schedule.html
@@ -201,23 +201,27 @@
             </tr>
             <tr>
                 <td>05/09 (Mon)</td>
-                <td rowspan="3">Wireless Network</td>
-                <td rowspan="3">Kurose & Ross, Chap. 6</td>
+                <td rowspan="2">Wireless Network</td>
+                <td rowspan="2">Kurose & Ross, Chap. 6</td>
             </tr>
             <tr>
                 <td>05/11 (Wed)</td>
             </tr>
             <tr>
                 <td>05/16 (Mon)</td>
-                
+                <td rowspan="2">Network Security</td>
+                <td rowspan="2">Kurose & Ross, Chap. 8</td>
             </tr>
             <tr>
                 <td>05/18 (Wed)</td>
-                <td>Network Security</td>
-                <td>Kurose & Ross, Chap. 8</td>
             </tr>
             <tr>
                 <td>05/23 (Mon)</td>
+                <td>No Class</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>05/25 (Wed)</td>
                 <td>Final Exam</td>
                 <td></td>
             </tr>
