--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div class="container">
     <div class="row">
         <div class="jumbotron">
-            <h1>Welcome to Join CSCI 379 Spring 2016!</h1>
+            <h1>Welcome to Join CSCI 379 Fall 2016!</h1>
             <p>
                 This course covers concepts in the design and implementation of computer
                 communication networks, their protocols, the applications, and advanced principles of Computer
@@ -68,9 +68,9 @@
                 <div class="row">
                     <div class="col-md-3"><i class="fa fa-clock-o"></i> Time:</div>
                     <div class="col-md-9">Section 01 M/W 8:00 - 9:15AM, </div>
-                    <div class="col-md-9 col-md-offset-3">Section 02 M/W 9:25 - 10.40AM</div>
+                    <!--<div class="col-md-9 col-md-offset-3">Section 02 M/W 9:25 - 10.40AM</div>-->
                     <div class="col-md-3"><i class="fa fa-map-pin"></i> Room:</div>
-                    <div class="col-md-9">North Hall 1306</div>
+                    <div class="col-md-9">NB/06.64.02</div>
                 </div>
             </div>
             <div class="col-md-6">
@@ -79,7 +79,7 @@
                     <div class="col-md-4"><i class="fa fa-envelope"> Email:</i></div>
                     <div class="col-md-8"><a href="http://csweb.gc.cuny.edu/~jchu1">Jie Chu</a> &lt;<a href="mailto:jchu1@gradcenter.cuny.edu">jchu1@gradcenter.cuny.edu</a>&gt;</div>
                     <div class="col-md-4"><i class="fa fa-building"></i> Office:</div>
-                    <div class="col-md-8">NB/06.63.32</div>
+                    <div class="col-md-8">TBD</div>
                     <div class="col-md-4"><i class="fa fa-calendar-o"></i> Office Hour:</div>
                     <div class="col-md-8">M/W 11:00 - 11:30am, or by appointment!</div>
                 </div>
