--- a/schedule.html
+++ b/schedule.html
@@ -155,17 +155,19 @@
                 </tr>
                 <tr>
                     <td>Class#18, 10/26 (Wed)</td>
-                    <td>Midterm Exam</td>
-                    <td></td>   
+                    <td>Network Layer</td>
+                    <td>Kurose & Ross, Chap. 4</td>
                 </tr>
                 <tr>
                     <td>Class#19, 10/31 (Mon)</td>
-                    <td rowspan="4">Network Layer</td>
-                    <td rowspan="4">Kurose & Ross, Chap. 4</td>
+                    <td>Midterm Exam</td>
+                    <td></td>  
+                    
                 </tr>
                 <tr>
                     <td>Class#20, 11/02 (Wed)</td>
-                   
+                    <td rowspan="3">Network Layer</td>
+                    <td rowspan="3">Kurose & Ross, Chap. 4</td>
                 </tr>
                 <tr>
                     <td>Class#21, 11/07 (Mon)</td>
