--- a/schedule.html
+++ b/schedule.html
@@ -77,6 +77,11 @@
         <div class="row">
             <table class="table table-stripped">
                 <tr>
+                    <th>Date</th>
+                    <th>Topic</th>
+                    <th>Readings</th>
+                </tr>
+                <tr>
                     <td>Class#1, 01/30 (Mon)</td>
                     <td rowspan="4">Introduction</td>
                     <td rowspan="4">Kurose & Ross, Chap. 1</td>
