--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div class="container">
     <div class="row">
         <div class="jumbotron">
-            <h1>Welcome to Join CSCI 379 Fall 2016!</h1>
+            <h1>Welcome to Join CSCI 379 Spring 2017!</h1>
             <p>
                 This course covers concepts in the design and implementation of computer
                 communication networks, their protocols, the applications, and advanced principles of Computer
@@ -68,7 +68,7 @@
                 <div class="row">
                     <div class="col-md-3"><i class="fa fa-clock-o"></i> Time:</div>
                     <div class="col-md-9">Section 01 M/W 8:00 - 9:15AM, </div>
-                    <!--<div class="col-md-9 col-md-offset-3">Section 02 M/W 9:25 - 10.40AM</div>-->
+                    <div class="col-md-9 col-md-offset-3">Section 02 M/W 9:25 - 10.40AM</div>
                     <div class="col-md-3"><i class="fa fa-map-pin"></i> Room:</div>
                     <div class="col-md-9">NB/06.64.02</div>
                 </div>
