--- a/schedule.html
+++ b/schedule.html
@@ -102,8 +102,8 @@
                 </tr>
                 <tr>
                     <td>Class#6, 02/15 (Wed)</td>
-                    <td></td>
-                    <td></td>
+                    <td>Application Layer</td>
+                    <td>Kurose & Ross, Chap. 2</td>
                 </tr>
                 <tr>
                     <td>Class#7, 02/20 (Mon)</td>
@@ -112,8 +112,8 @@
                 </tr>
                 <tr>
                     <td>Class#8, 02/22 (Wed)</td>
-                    <td rowspan="5">Application Layer</td>
-                    <td rowspan="5">Kurose & Ross, Chap. 2</td>
+                    <td rowspan="4">Application Layer</td>
+                    <td rowspan="4">Kurose & Ross, Chap. 2</td>
                 </tr>
                 <tr>
                     <td>Class#9, 02/27 (Mon)</td>
@@ -126,11 +126,12 @@
                 </tr>
                 <tr>
                     <td>Class#12, 03/08 (Wed)</td>
+                    <td rowspan="4">Transport Layer</td>
+                    <td rowspan="4">Kurose & Ross, Chap. 3</td>
                 </tr>
                 <tr>
                     <td>Class#13, 03/13 (Mon)</td>
-                    <td rowspan="4">Transport Layer</td>
-                    <td rowspan="4">Kurose & Ross, Chap. 3</td>
+                    
                 </tr>
                 <tr>
                     <td>Class#14, 03/15 (Wed)</td>
@@ -140,6 +141,8 @@
                 </tr>
                 <tr>
                     <td>Class#16, 03/22 (Wed)</td>
+                    <td>Midterm Exam</td>
+                    <td></td>
                 </tr>
                 <tr>
                     <td>Class#17, 03/27 (Mon)</td>
