update for fall 2017

--- a/resources.html
+++ b/resources.html
@@ -55,7 +55,7 @@
             <dd>Packet sniffer and analytics tool, check out <a href="https://www.wireshark.org">Official Website</a></dd>
 
             <dt>Python</dt>
-            <dd>Very nice programming language, easy to write programm. Check out <a href="https://www.python.org">Official Website</a></dd>
+            <dd>Very nice programming language, easy to write programm. Check out <a href="https://www.python.org">Official Website</a></dd> and a very good <a href="https://www.slideshare.net/nowells/introduction-to-python-5182313/">tutorial</a>.
 
             <dt>Anaconda</dt>
             <dd>A complete python environment, more on <a href="https://www.continuum.io/why-anaconda">official
