update for fall 2017

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div class="container">
     <div class="row">
         <div class="jumbotron">
-            <h1>Welcome to Join CSCI 379 Spring 2017!</h1>
+            <h1>Welcome to Join CSCI 379 Fall 2017!</h1>
             <p>
                 This course covers concepts in the design and implementation of computer
                 communication networks, their protocols, the applications, and advanced principles of Computer
