--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
         <div>
             <i class="fa fa-bullhorn"></i><strong> Announcement</strong>
             <div class="col-md-offset-2 col-md-10">
-                Check back later!
+                <div class="alert alert-info" role="alert">
+                    No Class on Nov. 22!
+                </div>
             </div>
         </div>
     </div>
@@ -128,5 +130,6 @@
 <script src="js/jquery.min.js"></script>
 <script src="js/tether.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script type="js/umd/alert.js"></script>
 </body>
 </html>
