--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div class="container">
     <div class="row">
         <div class="jumbotron">
-            <h1>Welcome to Join CSCI 379 Fall 2017!</h1>
+            <h1>Welcome to Join CSCI 379 Spring 2018!</h1>
             <p>
                 This course covers concepts in the design and implementation of computer
                 communication networks, their protocols, the applications, and advanced principles of Computer
@@ -120,9 +120,6 @@
         <div>
             <i class="fa fa-bullhorn"></i><strong> Announcement</strong>
             <div class="col-md-offset-2 col-md-10">
-                <div class="alert alert-info" role="alert">
-                    No Class on Nov. 22!
-                </div>
             </div>
         </div>
     </div>
