--- a/schedule.html
+++ b/schedule.html
@@ -100,21 +100,23 @@
                 </tr>
                 <tr>
                   <td>Class#4, 09/05 (Wed)</td>
-                  <td rowspan="2">Introduction</td>
-                  <td rowspan="2">Kurose & Ross, Chap. 1</td>
+                  <td>Introduction</td>
+                  <td>Kurose & Ross, Chap. 1</td>
                 </tr>
                 <tr>
                   <td>Class#5, 09/10 (Mon)</td>
-
+                  <td>No Class</td>
+                  <td></td>
                 </tr>
                 <tr>
                   <td>Class#6, 09/12 (Wed)</td>
-                  <td rowspan="2">Application Layer</td>
-                  <td rowspan="2">Kurose & Ross, Chap. 2</td>
+                  <td>Introduction</td>
+                  <td>Kurose & Ross, Chap. 1</td>
                 </tr>
                 <tr>
                   <td>Class#7, 09/17 (Mon)</td>
-
+                  <td>Application Layer</td>
+                  <td>Kurose & Ross, Chap. 2</td>
                 </tr>
                 <tr>
                   <td>Class#8, 09/19 (Wed)</td>
@@ -145,12 +147,14 @@
                 </tr>
                 <tr>
                   <td>Class#14, 10/10 (Wed)</td>
-                  <td rowspan="6">Transport Layer</td>
-                  <td rowspan="6">Kurose & Ross, Chap. 3</td>
+                  <td>Application Layer</td>
+                  <td>Kurose & Ross, Chap. 2</td>
+
                 </tr>
                 <tr>
                   <td>Class#15, 10/15 (Mon)</td>
-
+                  <td rowspan="6">Transport Layer</td>
+                  <td rowspan="6">Kurose & Ross, Chap. 3</td>
                 </tr>
                 <tr>
                   <td>Class#16, 10/17 (Wed)</td>
@@ -174,17 +178,17 @@
                 </tr>
                 <tr>
                   <td>Class#21, 11/05 (Mon)</td>
+
+                </tr>
+                <tr>
+                  <td>Class#22, 11/07 (Wed)</td>
                   <td>Midterm Exam</td>
                   <td></td>
                 </tr>
                 <tr>
-                  <td>Class#22, 11/07 (Wed)</td>
+                  <td>Class#23, 11/12 (Mon)</td>
                   <td rowspan="6">Network Layer</td>
                   <td rowspan="6">Kurose & Ross, Chap. 4</td>
-                </tr>
-                <tr>
-                  <td>Class#23, 11/12 (Mon)</td>
-
                 </tr>
                 <tr>
                   <td>Class#24, 11/14 (Wed)</td>
@@ -203,11 +207,12 @@
                 </tr>
                 <tr>
                   <td>Class#29, 12/03 (Mon)</td>
-                  <td rowspan="4">Link Layer</td>
-                  <td rowspan="4">Kurose & Ross, Chap. 5</td>
+
                 </tr>
                 <tr>
                   <td>Class#30, 12/05 (Wed)</td>
+                  <td rowspan="3">Link Layer</td>
+                  <td rowspan="3">Kurose & Ross, Chap. 5</td>
                 </tr>
                 <tr>
                   <td>Class#31, 12/10 (Mon)</td>
