--- a/schedule.html
+++ b/schedule.html
@@ -225,11 +225,13 @@
                 </tr>
                 <tr>
                   <td>Class#33, 12/17 (Mon)</td>
-                  <td rowspan="2">Final Exam for section 2, 8:00 am - 10:00 am</td>
-                  <td rowspan="2"></td>
+                  <td >Final Exam for section 1, 8:00 am - 10:00 am</td>
+                  <td ></td>
                 </tr>
                 <tr>
                   <td>Class#34, 12/19 (Wed)</td>
+                  <td >Final Exam for section 2, 8:00 am - 10:00 am</td>
+                  <td ></td>
                 </tr>
             </table>
         </div>
