--- a/schedule.html
+++ b/schedule.html
@@ -84,155 +84,153 @@
                     <th>Topic</th>
                     <th>Readings</th>
                 </tr>
-                <tr>
-                  <td>Class#1, 08/27 (Mon)</td>
-                  <td rowspan="2">Introduction</td>
-                  <td rowspan="2">Kurose & Ross, Chap. 1</td>
-                </tr>
-                <tr>
-                  <td>Class#2, 08/29 (Wed)</td>
+              	<tr>
+              		<td>Class#1, 01/28 (Mon)</td>
+                  <td rowspan="4">Introduction</td>
+                  <td rowspan="4">Kurose & Ross, Chap. 1</td>
+              	</tr>
+              	<tr>
+              		<td>Class#2, 01/30 (Wed)</td>
 
-                </tr>
-                <tr>
-                  <td>Class#3, 09/03 (Mon)</td>
+              	</tr>
+              	<tr>
+              		<td>Class#3, 02/04 (Mon)</td>
+
+              	</tr>
+              	<tr>
+              		<td>Class#4, 02/06 (Wed)</td>
+
+              	</tr>
+              	<tr>
+              		<td>Class#5, 02/11 (Mon)</td>
+                  <td rowspan="2">Application Layer</td>
+                  <td rowspan="2">Kurose & Ross, Chap. 2</td>
+              	</tr>
+              	<tr>
+              		<td>Class#6, 02/13 (Wed)</td>
+
+              	</tr>
+              	<tr>
+              		<td>Class#7, 02/18 (Mon)</td>
                   <td>No Class</td>
                   <td></td>
-                </tr>
-                <tr>
-                  <td>Class#4, 09/05 (Wed)</td>
-                  <td>Introduction</td>
-                  <td>Kurose & Ross, Chap. 1</td>
-                </tr>
-                <tr>
-                  <td>Class#5, 09/10 (Mon)</td>
-                  <td>No Class</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>Class#6, 09/12 (Wed)</td>
-                  <td>Introduction</td>
-                  <td>Kurose & Ross, Chap. 1</td>
-                </tr>
-                <tr>
-                  <td>Class#7, 09/17 (Mon)</td>
-                  <td>Application Layer</td>
-                  <td>Kurose & Ross, Chap. 2</td>
-                </tr>
-                <tr>
-                  <td>Class#8, 09/19 (Wed)</td>
-                  <td>No Class</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>Class#9, 09/24 (Mon)</td>
-                  <td rowspan="4">Application Layer</td>
-                  <td rowspan="4">Kurose & Ross, Chap. 2</td>
-                </tr>
-                <tr>
-                  <td>Class#10, 09/26 (Wed)</td>
+              	</tr>
+              	<tr>
+              		<td>Class#8, 02/20 (Wed)</td>
+                  <td rowspan="3">Application Layer</td>
+                  <td rowspan="3">Kurose & Ross, Chap. 2</td>
+              	</tr>
+              	<tr>
+              		<td>Class#9, 02/25 (Mon)</td>
 
-                </tr>
-                <tr>
-                  <td>Class#11, 10/01 (Mon)</td>
+              	</tr>
+              	<tr>
+              		<td>Class#10, 02/27 (Wed)</td>
 
-                </tr>
-                <tr>
-                  <td>Class#12, 10/03 (Wed)</td>
-
-                </tr>
-                <tr>
-                  <td>Class#13, 10/08 (Mon)</td>
-                  <td>No Class</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td>Class#14, 10/10 (Wed)</td>
-                  <td>Application Layer</td>
-                  <td>Kurose & Ross, Chap. 2</td>
-
-                </tr>
-                <tr>
-                  <td>Class#15, 10/15 (Mon)</td>
+              	</tr>
+              	<tr>
+              		<td>Class#11, 03/04 (Mon)</td>
                   <td rowspan="6">Transport Layer</td>
                   <td rowspan="6">Kurose & Ross, Chap. 3</td>
-                </tr>
-                <tr>
-                  <td>Class#16, 10/17 (Wed)</td>
+              	</tr>
+              	<tr>
+              		<td>Class#12, 03/06 (Wed)</td>
 
-                </tr>
-                <tr>
-                  <td>Class#17, 10/22 (Mon)</td>
+              	</tr>
+              	<tr>
+              		<td>Class#13, 03/11 (Mon)</td>
 
-                </tr>
-                <tr>
-                  <td>Class#18, 10/24 (Wed)</td>
+              	</tr>
+              	<tr>
+              		<td>Class#14, 03/13 (Wed)</td>
 
-                </tr>
-                <tr>
-                  <td>Class#19, 10/29 (Mon)</td>
+              	</tr>
+              	<tr>
+              		<td>Class#15, 03/18 (Mon)</td>
 
-                </tr>
-                <tr>
-                  <td>Class#20, 10/31 (Wed)</td>
+              	</tr>
+              	<tr>
+              		<td>Class#16, 03/20 (Wed)</td>
 
-                </tr>
-                <tr>
-                  <td>Class#21, 11/05 (Mon)</td>
-                  <td rowspan="2">Network Layer</td>
-                  <td rowspan="2">Kurose & Ross, Chap. 4</td>
-                </tr>
-                <tr>
-                  <td>Class#22, 11/07 (Wed)</td>
+              	</tr>
+              	<tr>
+              		<td>Class#17, 03/25 (Mon)</td>
 
-                </tr>
-                <tr>
-                  <td>Class#23, 11/12 (Mon)</td>
+              	</tr>
+              	<tr>
+              		<td>Class#18, 03/27 (Wed)</td>
                   <td>Midterm Exam</td>
                   <td></td>
+              	</tr>
+              	<tr>
+              		<td>Class#19, 04/01 (Mon)</td>
+                  <td rowspan="6">Network Layer</td>
+                  <td rowspan="6">Kurose & Ross, Chap. 4&5</td>
+              	</tr>
+              	<tr>
+              		<td>Class#20, 04/03 (Wed)</td>
 
-                </tr>
-                <tr>
-                  <td>Class#24, 11/14 (Wed)</td>
-                  <td rowspan="4">Network Layer</td>
-                  <td rowspan="4">Kurose & Ross, Chap. 4</td>
-                </tr>
-                <tr>
-                  <td>Class#25, 11/19 (Mon)</td>
-                </tr>
-                <tr>
-                  <td>Class#26, 11/21 (Wed)</td>
-                </tr>
-                <tr>
-                  <td>Class#27, 11/26 (Mon)</td>
-                </tr>
-                <tr>
-                  <td>Class#28, 11/28 (Wed)</td>
-                </tr>
-                <tr>
-                  <td>Class#29, 12/03 (Mon)</td>
+              	</tr>
+              	<tr>
+              		<td>Class#21, 04/08 (Mon)</td>
+
+              	</tr>
+              	<tr>
+              		<td>Class#22, 04/10 (Wed)</td>
+
+              	</tr>
+              	<tr>
+              		<td>Class#23, 04/15 (Mon)</td>
+
+              	</tr>
+              	<tr>
+              		<td>Class#24, 04/17 (Wed)</td>
+
+              	</tr>
+              	<tr>
+              		<td>Class#25, 04/22 (Mon)</td>
+                  <td rowspan="2">No Class - Spring break</td>
+                  <td rowspan="2"></td>
+              	</tr>
+              	<tr>
+              		<td>Class#26, 04/24 (Wed)</td>
+              	</tr>
+              	<tr>
+              		<td>Class#27, 04/29 (Mon)</td>
                   <td rowspan="4">Link Layer</td>
-                  <td rowspan="4">Kurose & Ross, Chap. 5</td>
-                </tr>
-                <tr>
-                  <td>Class#30, 12/05 (Wed)</td>
+                  <td rowspan="4">Kurose & Ross, Chap. 6</td>
+              	</tr>
+              	<tr>
+              		<td>Class#28, 05/01 (Wed)</td>
 
-                </tr>
-                <tr>
-                  <td>Class#31, 12/10 (Mon)</td>
-                </tr>
-                <tr>
-                  <td>Class#32, 12/12 (Wed)</td>
-                </tr>
-                <tr>
-                  <td>Class#33, 12/17 (Mon)</td>
+              	</tr>
+              	<tr>
+              		<td>Class#29, 05/06 (Mon)</td>
+
+              	</tr>
+              	<tr>
+              		<td>Class#30, 05/08 (Wed)</td>
+
+              	</tr>
+              	<tr>
+              		<td>Class#31, 05/13 (Mon)</td>
+                  <td rowspan="2">Wireless Network</td>
+                  <td rowspan="2">Kurose & Ross, Chap. 7</td>
+              	</tr>
+              	<tr>
+              		<td>Class#32, 05/15 (Wed)</td>
+
+              	</tr>
+              	<tr>
+              		<td>Class#33, 05/20 (Mon)</td>
                   <td >Final Exam for section 1, 8:00 am - 10:00 am</td>
                   <td ></td>
-                </tr>
-                <tr>
-                  <td>Class#34, 12/19 (Wed)</td>
+              	</tr>
+              	<tr>
+              		<td>Class#34, 05/22 (Wed)</td>
                   <td >Final Exam for section 2, 8:00 am - 10:00 am</td>
                   <td ></td>
-                </tr>
+              	</tr>
             </table>
         </div>
     </div>
